nenolod     2006/08/13 18:27:28 UTC	(20060813-6031)
  Log:
  - fix module loaded message
  

  Changes:	Modified:
  +3 -3		trunk/src/module.c (File Modified) 


nenolod     2006/08/13 18:12:43 UTC	(20060813-6027)
  Log:
  - support for WOD-style dice generation. Obtained from SpireNet patches.
  

  Changes:	Modified:
  +84 -0	trunk/contrib/fc_dice.c (File Modified) 


jilles      2006/08/13 18:05:55 UTC	(20060813-6025)
  Log:
  Fix /ns help hold.
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/hold.c (File Modified) 


w00t        2006/08/13 15:15:01 UTC	(20060813-6021)
  Log:
  Why the fuck was memoserv sending this :?

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/register.c (File Modified) 


jilles      2006/08/08 19:38:11 UTC	(20060808-6019)
  Log:
  Give verbose (/cs set verbose) notices on foundership changes
  (/cs set founder, /cs ftransfer, succession).
  The notice for ftransfer makes clear it is done by admin
  authority but does not disclose the oper's nick.
  

  Changes:	Modified:
  +1 -0		trunk/modules/chanserv/ftransfer.c (File Modified) 
  +1 -0		trunk/modules/chanserv/set.c (File Modified) 
  +4 -1		trunk/src/node.c (File Modified) 


jilles      2006/08/07 14:06:59 UTC	(20060807-6017)
  Log:
  Add support for CIDR channel bans/exceptions and akills.
  src/cidr.c provides match_ips() for matching a CIDR mask
  against an IP address and match_cidr() for channel bans
  (with nick!user@). In accordance with match(), zero is
  returned for a match, non-zero otherwise. The code is
  mostly taken from ratbox but modified to eliminate OS
  dependency for IPv6.
  CIDR is checked whether the ircd supports it or not.
  ChanServ RECOVER used to only check host and vhost matches
  for the implied unban but now also checks ip match and
  CIDR.
  

  Changes:	Modified:
  +3 -1		trunk/README (File Modified) 
  +4 -0		trunk/include/extern.h (File Modified) 
  +2 -4		trunk/modules/chanserv/ban.c (File Modified) 