@@ -5,7 +5,7 @@
  * This file contains the implementation of the database
  * using PostgreSQL.
  *
- * $Id: postgresql.c 5981 2006-07-31 22:33:14Z nenolod $
+ * $Id: postgresql.c 6035 2006-08-14 14:05:41Z jilles $
  */
 
 #include "atheme.h"
@@ -14,7 +14,7 @@
 DECLARE_MODULE_V1
 (
 	"backend/postgresql", TRUE, _modinit, NULL,
-	"$Id: postgresql.c 5981 2006-07-31 22:33:14Z nenolod $",
+	"$Id: postgresql.c 6035 2006-08-14 14:05:41Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -91,60 +91,6 @@ static PGresult *safe_query(const char *string, ...)
 	return res;
 }
 
-unsigned int mu_out = 0;
-
-static int postgresql_db_save_myusers_cb(dictionary_elem_t *delem, void *privdata)
-{
-	myuser_t *mu = (myuser_t *) delem->node.data;
-	char user[BUFSIZE];
-	char pass[BUFSIZE];
-	char email[BUFSIZE];
-
-	PQescapeString(user, mu->name, BUFSIZE);
-	PQescapeString(pass, mu->pass, BUFSIZE);
-	PQescapeString(email, mu->email, BUFSIZE);
-
-	res = safe_query("INSERT INTO ACCOUNTS(ID, USERNAME, PASSWORD, EMAIL, REGISTERED, LASTLOGIN, FLAGS) "
-		"VALUES (%d, '%s', '%s', '%s', %ld, %ld, %ld)", mu_out, user, pass, email,
-		(long) mu->registered, (long) mu->lastlogin, (long) mu->flags);
-
-	LIST_FOREACH(tn, mu->metadata.head)
-	{
-		char key[BUFSIZE], keyval[BUFSIZE];
-		metadata_t *md = (metadata_t *)tn->data;
-
-		PQescapeString(key, md->name, BUFSIZE);
-		PQescapeString(keyval, md->value, BUFSIZE);
-
-		res = safe_query("INSERT INTO ACCOUNT_METADATA(ID, PARENT, KEYNAME, VALUE) VALUES ("
-			"DEFAULT, %d, '%s', '%s');", ii, key, keyval);
-	}
-
-	LIST_FOREACH(tn, mu->memos.head)
-	{
-		char sender[BUFSIZE], text[BUFSIZE];
-		mymemo_t *mz = (mymemo_t *)tn->data;
-
-		PQescapeString(sender, mz->sender, BUFSIZE);
-		PQescapeString(text, mz->text, BUFSIZE);
-
-		res = safe_query("INSERT INTO ACCOUNT_MEMOS(ID, PARENT, SENDER, TIME, STATUS, TEXT) VALUES ("
-			"DEFAULT, %d, '%s', %ld, %ld, '%s');", ii, sender, mz->sent, mz->status, text);
-	}
-			
-	LIST_FOREACH(tn, mu->memo_ignores.head)
-	{
-		char target[BUFSIZE], *temp = (char *)tn->data;
-		PQescapeString(target, temp, strlen(temp));
-				
-		res = safe_query("INSERT INTO ACCOUNT_MEMO_IGNORES(ID, PARENT, TARGET) VALUES(DEFAULT, %d, '%s')", ii, target);
-	}
-
-	mu_out++;
-
-	return 0;
-}
-
 /*
  * Writes a clean snapshot of Atheme's state to the SQL database.
  *
@@ -159,8 +105,11 @@ static void postgresql_db_save(void *arg)
 	node_t *n, *tn, *tn2;
 	uint32_t i, ii, iii;
 	PGresult *res;
-
-	mu_out = 0;
+	char user[BUFSIZE];
+	char pass[BUFSIZE];
+	char email[BUFSIZE];
+	dictionary_iteration_state_t state;
+	unsigned int mu_out = 0;
 
 	db_connect(FALSE);
 
@@ -179,7 +128,50 @@ static void postgresql_db_save(void *arg)
 
 	slog(LG_DEBUG, "db_save(): saving myusers");
 
-	dictionary_foreach(mulist, postgresql_db_save_myusers_cb, NULL);
+	DICTIONARY_FOREACH(mu, &state, mulist)
+	{
+		PQescapeString(user, mu->name, BUFSIZE);
+		PQescapeString(pass, mu->pass, BUFSIZE);
+		PQescapeString(email, mu->email, BUFSIZE);
+
+		res = safe_query("INSERT INTO ACCOUNTS(ID, USERNAME, PASSWORD, EMAIL, REGISTERED, LASTLOGIN, FLAGS) "
+			"VALUES (%d, '%s', '%s', '%s', %ld, %ld, %ld)", mu_out, user, pass, email,
+			(long) mu->registered, (long) mu->lastlogin, (long) mu->flags);
+
+		LIST_FOREACH(tn, mu->metadata.head)
+		{
+			char key[BUFSIZE], keyval[BUFSIZE];
+			metadata_t *md = (metadata_t *)tn->data;
+
+			PQescapeString(key, md->name, BUFSIZE);
+			PQescapeString(keyval, md->value, BUFSIZE);
+
+			res = safe_query("INSERT INTO ACCOUNT_METADATA(ID, PARENT, KEYNAME, VALUE) VALUES ("
+				"DEFAULT, %d, '%s', '%s');", ii, key, keyval);
+		}
+
+		LIST_FOREACH(tn, mu->memos.head)
+		{
+			char sender[BUFSIZE], text[BUFSIZE];
+			mymemo_t *mz = (mymemo_t *)tn->data;
+
+			PQescapeString(sender, mz->sender, BUFSIZE);
+			PQescapeString(text, mz->text, BUFSIZE);
+
+			res = safe_query("INSERT INTO ACCOUNT_MEMOS(ID, PARENT, SENDER, TIME, STATUS, TEXT) VALUES ("
+				"DEFAULT, %d, '%s', %ld, %ld, '%s');", ii, sender, mz->sent, mz->status, text);
+		}
+				
+		LIST_FOREACH(tn, mu->memo_ignores.head)
+		{
+			char target[BUFSIZE], *temp = (char *)tn->data;
+			PQescapeString(target, temp, strlen(temp));
+					
+			res = safe_query("INSERT INTO ACCOUNT_MEMO_IGNORES(ID, PARENT, TARGET) VALUES(DEFAULT, %d, '%s')", ii, target);
+		}
+
+		mu_out++;
+	}
 
 	slog(LG_DEBUG, "db_save(): saving mychans");
 
