@@ -1,3 +1,12 @@
+nenolod     2006/08/13 21:06:56 UTC	(20060813-6033)
+  Log:
+  - LoveServ implementation
+  
+
+  Changes:	Modified:
+  +353 -0	trunk/contrib/ircd_loveserv.c (File Added) 
+
+
 nenolod     2006/08/13 18:27:28 UTC	(20060813-6031)
   Log:
   - fix module loaded message
